foi feito parte do html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,42 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jessé Silva - Software Developer</title>
-  <link rel="shortcut icon" href="images/code (1).png" type="image/x-icon">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Jessé Silva - Software Developer</title>
+    <link rel="shortcut icon" href="images/code (1).png" type="image/x-icon" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <h1>J <span>S</span></h1>
+      <nav>
+        <ul class="primeira-navegacao">
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#resume">Resume</a></li>
+          <li><a href="#portifolio">Portifólio</a></li>
+          <li><a href="#contato">Contato</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <section aria-label="curriculo jesse" class="section-um">
+        <div>
+          <h2>Olá! Eu sou</h2>
+          <h2 class="digitando">Web Developer Design</h2>
+          <p>
+            Meu nome é Jessé Silva e sou um desenvolvedor front-end baseado em
+            Icapuí - CE, Brasil. Venho desenvolvendo softwares focados em
+            Desenvolvimento Frontend utilizando Html, Css, JavaScript. Tenho
+            grandes habilidades em resolução de problemas, liderança e trabalho
+            em equipe, dando e recebendo feedback e comunicação. 
+          </p>
+          <a href="#">Dowload CV</a>
+        </div>
+        <img src="images/download.png" alt="Minha imagem, com uma blusa cinza, sorrindo , barba fina">
+      </section>
+    </main>
+  </body>
 </html>
