--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <section aria-label="curriculo jesse" class="section-um">
         <div>
           <h2>Olá! Eu sou</h2>
-          <h2 class="digitando">Web Developer Design</h2>
+          <h2 class="digitando" id="digitando">Web Developer Design</h2>
           <p>
             Meu nome é Jessé Silva e sou um desenvolvedor front-end baseado em
             Icapuí - CE, Brasil. Venho desenvolvendo softwares focados em
@@ -35,8 +35,10 @@
           </p>
           <a href="#">Dowload CV</a>
         </div>
-        <img src="images/download.png" alt="Minha imagem, com uma blusa cinza, sorrindo , barba fina">
+        <img src="images/download.png"  alt="Minha imagem, com uma blusa cinza, sorrindo , barba fina">
       </section>
     </main>
+
+    <script src="script.js"></script>
   </body>
 </html>
