feito uma seção sobre mim

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jessé Silva - Software Developer</title>
     <link rel="shortcut icon" href="images/code (1).png" type="image/x-icon" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -21,22 +22,61 @@
       </nav>
     </header>
 
+    <section aria-label="curriculo jesse" class="section-um">
+      <div>
+        <h2>Olá! Eu sou</h2>
+        <h2 class="digitando" id="digitando">Web Developer Design</h2>
+        <p>
+          Meu nome é Jessé Silva e sou um desenvolvedor front-end baseado em
+          Icapuí - CE, Brasil. Venho desenvolvendo softwares focados em
+          Desenvolvimento Frontend utilizando Html, Css, JavaScript. Tenho
+          grandes habilidades em resolução de problemas, liderança e trabalho em
+          equipe, dando e recebendo feedback e comunicação.
+        </p>
+        <a href="#">Dowload CV</a>
+      </div>
+      <img
+        src="images/download.png"
+        alt="Minha imagem, com uma blusa cinza, sorrindo , barba fina"
+      />
+    </section>
+
     <main>
-      <section aria-label="curriculo jesse" class="section-um">
-        <div>
-          <h2>Olá! Eu sou</h2>
-          <h2 class="digitando" id="digitando">Web Developer Design</h2>
-          <p>
-            Meu nome é Jessé Silva e sou um desenvolvedor front-end baseado em
-            Icapuí - CE, Brasil. Venho desenvolvendo softwares focados em
-            Desenvolvimento Frontend utilizando Html, Css, JavaScript. Tenho
-            grandes habilidades em resolução de problemas, liderança e trabalho
-            em equipe, dando e recebendo feedback e comunicação. 
-          </p>
-          <a href="#">Dowload CV</a>
+      <article class="sobre mim">
+        <div class="sobre-mim-titulo">
+          <h1>Sobre Mim</h1>
+          <p>Perfil Profissional - Tudo Sbre Mim</p>
+          <div>
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
         </div>
-        <img src="images/download.png"  alt="Minha imagem, com uma blusa cinza, sorrindo , barba fina">
-      </section>
+        <img src="images/download.png" alt="minha imagem ">
+        <div class="sobre-conteudo">
+          <div class="sobre-texto">
+            <h1>Eu Sou JS - Jessé</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis tempora porro necessitatibus ducimus quibusdam molestiae reprehenderit delectus voluptatum error voluptates!
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus harum inventore doloremque delectus eum exercitationem atque! Necessitatibus a eum earum.
+              <br>
+              <br>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur ipsum, est iusto officia voluptatum ex quam laboriosam similique veniam eligendi.
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto at eveniet ipsam neque doloribus consectetur possimus reiciendis fugiat? Sapiente, quisquam!
+            </p>
+          </div>
+          <div class="sobre-info">
+            <p><i class="fa-solid fa-calendar-days"></i>Data de Nascimento: 09 Fevereiro 1991</p>
+            <p><i class="fa-solid fa-location-dot"></i>Endereço: Serra de Peroba, Icapuí, Brasil</p>
+            <p><i class="fa-sharp fa-solid fa-globe"></i>Idiomas: Brazil</p>
+            <p><i class="fa-solid fa-flag"></i>Nacionalidade: Brasileiro - Nativo</p>
+            <p><i class="fa-solid fa-phone-volume"></i>Telefone: +55 (88)9 9366-0690</p>
+            <p><i class="fa-solid fa-envelope"></i>Email: jessep.s@hotmail.com</p>
+
+
+          </div>
+        </div>
+      </article>
     </main>
 
     <script src="script.js"></script>
