finalizado mais uma seção

--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
       <article class="sobre mim">
         <div class="sobre-mim-titulo">
           <h1>Sobre Mim</h1>
-          <p>Perfil Profissional - Tudo Sbre Mim</p>
+          <p>Perfil Profissional - Tudo Sobre Mim</p>
           <div>
             <span></span>
             <span></span>
             <span></span>
           </div>
         </div>
-        <img src="images/download.png" alt="minha imagem ">
+        <img src="images/download.png"  alt="minha imagem ">
         <div class="sobre-conteudo">
           <div class="sobre-texto">
             <h1>Eu Sou JS - Jessé</h1>
